Fixed twitter handle and added facebook

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -75,9 +75,17 @@
       <ul class="profile-info-items">
         <% if !@teacher.info.twitterhandle.empty? %>
         <li>
-          <a href="<%= @teacher.info.twitterhandle %>" target="_blank">
+          <a href="http://www.twitter.com/<%= @teacher.info.twitterhandle %>" target="_blank">
             <span class="twitterIcon"><%= image_tag("settings/twitter.png", :style => "margin-top:-4px") %></span>
-            <%= URI.parse(@teacher.info.twitterhandle).path.split('/').last %>
+            @<%= @teacher.info.twitterhandle %>
+          </a>
+        </li>
+        <% end %>
+        <% if !@teacher.info.facebookurl.empty? %>
+        <li>
+          <a href="http://www.facebook.com/<%= @teacher.info.facebookurl %>" target="_blank">
+            <span class="twitterIcon"><%= image_tag("settings/facebook.png", :style => "margin-top:-4px") %></span>
+            <%= @teacher.info.facebookurl %>
           </a>
         </li>
         <% end %>
