--- a/app/views/layouts/_binderlist.html.erb
+++ b/app/views/layouts/_binderlist.html.erb
@@ -8,7 +8,7 @@
 
 			<div id="<%= binder.id.to_s %>" class="content-item folder-item">
 				<div class="folder-preview">
-			        <div class="single-hold" style="margin-top:-1px;background-image:url('<%= imgarr[0] %>');background-position: -25px;"></div>
+			        <div class="single-hold" style="margin-top:-1px;background-image:url('<%= imgarr[0] %>')"></div>
 
 			    </div> <!-- end of fold prevew -->
 
