--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -195,7 +195,7 @@
 									<% end %>
 								</div>
 
-
+								<% if (!f[:binder].current_version.nil? && f[:binder].current_version.imgstatus["img_thumb_lg"]["generated"]) || f[:binder].type != 1 || !f[:binder].body.empty? %>
 								<a href="<%= named_binder_route(f[:binder]) %>" class="conlink">
 									<div class="thecontent">
 											<!-- <div class="previmg" style="background-image: url(http://img.cla.co/3b4c0e0a00ddab30cff952e4a7158c95/thumb_lg.png)"></div> -->
@@ -209,7 +209,7 @@
 													<div class="previmg" style="background-image: url('<%= f[:binder].current_version.img_thumb_lg.url %>');background-repeat: no-repeat;background-position: center;"></div>
 												<% end %>
 											<% end %>
-
+											<% if !f[:binder].body.empty? %>
 											<div class="txtcon">
 												<div class="contitle">
 													<!--Curiosity Landing Pictures (NASA Exclusive)-->
@@ -217,17 +217,18 @@
 													%>
 												</div>
 
-												<% if !f[:binder].body.empty? %>
+												
 												<div class="condesc">
 													<!-- The curiosity rover successfully landed on the Mars surface last Friday. These photos are the first to come back from the red planet. Very exciting times for the NASA team! <u>view more</u> -->
 													<%= strip_tags(f[:binder].body) %>
 												</div>
-												<% end %>
 											</div>
+											<% end %>
 
 										<div style="clear:both"></div>
 									</div>
 								</a>
+								<% end %>
 
 							</div>
 
@@ -284,10 +285,29 @@
 					<% else %>
 						ERROR!<br />
 
-				<% end %>
+					<% end %>
+
+
 
 							<div style="clear:both"></div>
 						</div>
+
+													<% if !f[:log][:full].nil? %>
+							<div class="newsitem">
+								<div class="imgarea">
+									<a href="#">
+										<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">
+										<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s if !f[:owner].info.nil? && !f[:owner].info.avatar.nil? %>>-->
+									</a>
+								</div>
+								<div class="feedcontent">
+									<div class="thetitle">
+										<a href="<%= "/#{f[:owner].username}" %>">See more from <%= f[:owner].username %></a>
+									</div>
+								</div>
+							<div style="clear:both"></div>
+						</div>
+							<% end %>
 
 			<% end %>
 
