--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -14,7 +14,7 @@
 				-->
 						<div class="newsitem">
 							<div class="imgarea">
-								<a href="#">
+								<a href="<%= "/#{f[:owner].username}" %>">
 									<!--<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/273743_100002541791520_1077070822_q.jpg">-->
 									<img src=<%= f[:owner].info.avatar.thumb_md.url.to_s if !f[:owner].info.nil? && !f[:owner].info.avatar.nil? %>>
 								</a>
