--- a/app/views/layouts/_binderlist.html.erb
+++ b/app/views/layouts/_binderlist.html.erb
@@ -49,7 +49,7 @@
 					<div class="descarea"><%= binder.body.empty? ? "<span style='font-style:italic;color:#aaa'>No description</span>".html_safe : truncate(strip_tags(binder.body), :length => 250, :omission => "... <u>see more</u>").html_safe %></div>
 			    </div>
 
-		        <div class="lastupdate">Last updated by <%= link_to binder.username, "#{binder.username}" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
+		        <div class="lastupdate">Last updated by <%= link_to "#{binder.fname} #{binder.lname}", "/#{binder.username}" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
 
 			    <div class="drop-tog">
 			    	
