--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -161,7 +161,7 @@
 			            <div class="descarea"><%= binder.body.empty? ? "<span style='font-style:italic;color:#aaa'>No description</span>".html_safe : truncate(strip_tags(binder.body), :length => 250, :omission => "... <u>see more</u>").html_safe %></div>
 			        </div>
 
-			        <div class="lastupdate">Last updated by <%= link_to binder.user, "#" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
+			        <div class="lastupdate">Last updated by <%= link_to "#{binder.fname} #{binder.lname}", "/#{binder.user}" %> <span title="<%= Time.at(binder.last_update).to_datetime %>"><%= time_ago_in_words(Time.at(binder.last_update).to_datetime) %> ago</span></div>
 
 			        <% if signed_in? && current_teacher.id.to_s == @binder.owner %>
 			            <div class="drop-tog">
