--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -16,6 +16,19 @@
 		<div class="tab-content">
 		  <div class="tab-pane active" id="personal">
 
+		  	<div class="errornote">
+				<% if !current_teacher.errors.empty? || !current_teacher.info.errors.empty? %>
+					<ul>
+					<% current_teacher.errors.each do |err, msg| %>
+						<li><%= "#{msg}" %></li>
+					<% end %>
+					<% current_teacher.info.errors.each do |err, msg| %>
+						<li><%= "#{msg}" %></li>
+					<% end %>
+					</ul>
+				<% end %>
+			</div>
+
 		  	<%= form_for current_teacher, :url => updateinfo_path, :html => {:method => :POST, :multipart => true} do |f| %>
 
 			<% #render 'shared/error_messages', object: f.object %>
