--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -59,6 +59,9 @@
 
 					<% when "createfile" %>
 
+					<% #if false 
+					%>
+
 							<div class="feedcontent">
 								<div class="thetitle">
 									<% if @is_self %>
@@ -96,7 +99,13 @@
 
 							</div>
 
+					<% #end 
+					%>
+
 					<% when "createcontent" %>
+
+					<% #if false 
+					%>
 
 							<div class="feedcontent">
 								<div class="thetitle">
@@ -134,6 +143,9 @@
 								</a>
 
 							</div>
+
+					<% #end 
+					%>
 
 					<% when "update" %>
 
