removed avatar failover caching

--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -49,7 +49,7 @@
 
 		  	<div style="margin-top:30px;color:#444;font-style:italic">Update your profile picture<br />
 		  	<%= fields_for current_teacher.info do |i| %>
-		  	<%= i.file_field :avatar %><%= i.hidden_field :avatar_cache %></div>
+		  	<%= i.file_field :avatar %></div>
 
 		  	<div style="clear:both"></div>
 
