--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -98,6 +98,7 @@
 
 			<div>
 				<%= i.text_area :bio, :class => "biotext", :placeholder => "Why you teach, how long you've been teaching, etc", :value => current_teacher.info.bio %>
+				<p class="remain" style="color:#777;margin-top:-5px"></p>
 			</div>
 
 
