--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -3,6 +3,7 @@
   <%= stylesheet_link_tag "teacher", :media => "all" %>
   <%= javascript_include_tag "home/main" %>
   <%= stylesheet_link_tag    "home/main", :media => "all" %>
+  <% stylesheet_link_tag 'binders/folder' %>
 <% end %>
 
 <div class="container">
