read only tag clean

--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -86,7 +86,7 @@
 
 
 
-        <% if signed_in? && @binder.get_access(current_teacher.id.to_s) == 1 && !@tags.flatten.empty? %>
+        <% if @tags.flatten.any? || (current_teacher.nil? ? false : @binder.get_access(current_teacher.id.to_s) != 1)  %>
         <div id="folder-tags" class="conbox whitester">
           <div class="headstrip">
             <div class="inner">
