teach prof ul set width

--- a/app/assets/stylesheets/teacher.css
+++ b/app/assets/stylesheets/teacher.css
@@ -172,6 +172,7 @@ ul.nav-tabs.onProfile {
   padding: 0;
   list-style: none;
   border-bottom: none;
+  width: 575px;
 }
 
 ul.nav-tabs.onProfile li {
