--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -113,7 +113,7 @@
 				<% end %>
 				<%= link_to "Link your Twitter Account", teacher_omniauth_authorize_path(:twitter) %>
 				<%= link_to "Link your Facebook Account", teacher_omniauth_authorize_path(:facebook) %>
-				<%= current_teacher.omnihash["twitter"]["username"] if !current_teacher.omnihash["twitter"]["username"].nil? %>
+				<%= current_teacher.omnihash["twitter"]["username"] if !current_teacher.omnihash["twitter"].nil? %>
 			</div>
 
 
