lat long posting

--- a/app/views/teachers/editinfo.html.erb
+++ b/app/views/teachers/editinfo.html.erb
@@ -80,6 +80,12 @@
 
 			</div>
 
+
+				<input type="hidden" id="lat" name="lat" />
+				<input type="hidden" id="lng" name="lng" />
+
+
+
 			</div>
 
 
