--- a/app/assets/stylesheets/editinfo.css
+++ b/app/assets/stylesheets/editinfo.css
@@ -71,12 +71,12 @@
 }
 
 .sociallink {
-  width:290px;
+  width:300px;
   margin-top:5px;
   margin-bottom:20px;
   padding:10px;
-  background:#eee;
-  border: 1px solid #ddd;
+  background:#F6F6F6;
+  border: 1px solid #eee;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
